[gd_scene load_steps=17 format=3 uid="uid://uefpmlu6ommb"]

[ext_resource type="PackedScene" uid="uid://du6eyxexnodyu" path="res://Reusable Scenes/Return Button/return_button.tscn" id="1_p6bw8"]
[ext_resource type="Theme" uid="uid://dwoxpar5s6yce" path="res://Reusable Scenes/BlueTheme.tres" id="1_rgdqb"]
[ext_resource type="Script" path="res://Components/Gamemode 3/gamemode_3.gd" id="1_ycoyy"]
[ext_resource type="Script" path="res://Components/Gamemode 3/PlayerScript3.gd" id="2_eates"]
[ext_resource type="Script" path="res://Reusable Scenes/Player/Scripts/WizardSprites.gd" id="2_o8ocu"]
[ext_resource type="Texture2D" uid="uid://d16dmjsa12jrl" path="res://Reusable Scenes/Player/Sprites/Hats/DefaultHat.png" id="4_4cnjm"]
[ext_resource type="Texture2D" uid="uid://dyj60e6d7blyx" path="res://Reusable Scenes/Player/Sprites/Shirts/DefaultRobe.png" id="5_2yydu"]
[ext_resource type="Texture2D" uid="uid://ckswognketwcg" path="res://Reusable Scenes/Player/Sprites/Skin/DefaultSkin.png" id="6_w8o03"]
[ext_resource type="Texture2D" uid="uid://cmdxtytd1w5j3" path="res://Reusable Scenes/Player/Sprites/Facial Hair/DefaultBeard.png" id="7_e4c4l"]
[ext_resource type="Texture2D" uid="uid://benckrpvwuit1" path="res://Reusable Scenes/Player/Sprites/Legs/Legs.png" id="8_lguju"]
[ext_resource type="Texture2D" uid="uid://w63ynxuoqsdk" path="res://Reusable Scenes/Player/Sprites/Legs/LegsLeftUp.png" id="9_nn13b"]
[ext_resource type="Texture2D" uid="uid://sg3xf4yhnf1n" path="res://Reusable Scenes/Player/Sprites/Legs/LegsRightUp.png" id="10_h6bwa"]
[ext_resource type="PackedScene" uid="uid://4nyr3sr12iuu" path="res://Components/Gamemode 3/triangles.tscn" id="13_5ugqq"]

[sub_resource type="SpriteFrames" id="SpriteFrames_0ql60"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_lguju")
}],
"loop": false,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_nn13b")
}, {
"duration": 1.0,
"texture": ExtResource("10_h6bwa")
}],
"loop": true,
"name": &"Walking",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_aij12"]
radius = 13.0

[sub_resource type="CircleShape2D" id="CircleShape2D_hkmgt"]
radius = 13.0

[node name="Gamemode 3" type="Node2D"]
script = ExtResource("1_ycoyy")

[node name="UI Layer" type="CanvasLayer" parent="."]

[node name="Debug" type="Control" parent="UI Layer"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
theme = ExtResource("1_rgdqb")

[node name="Label" type="Label" parent="UI Layer/Debug"]
layout_mode = 0
offset_left = 8.0
offset_top = 7.0
offset_right = 136.0
offset_bottom = 33.0
text = "Gamemode 3"

[node name="Return Button" parent="UI Layer/Debug" instance=ExtResource("1_p6bw8")]
layout_mode = 0
offset_left = 0.0
offset_top = 0.0
offset_right = 141.0
offset_bottom = 31.0

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(760, 115)
motion_mode = 1
script = ExtResource("2_eates")

[node name="Sprites" type="Node2D" parent="Player"]
script = ExtResource("2_o8ocu")

[node name="Skin" type="Sprite2D" parent="Player/Sprites"]
texture = ExtResource("6_w8o03")

[node name="Hat" type="Sprite2D" parent="Player/Sprites"]
texture = ExtResource("4_4cnjm")

[node name="Shirt" type="Sprite2D" parent="Player/Sprites"]
texture = ExtResource("5_2yydu")

[node name="Facial Hair" type="Sprite2D" parent="Player/Sprites"]
texture = ExtResource("7_e4c4l")

[node name="Legs" type="AnimatedSprite2D" parent="Player/Sprites"]
sprite_frames = SubResource("SpriteFrames_0ql60")
animation = &"Idle"

[node name="Hitbox" type="CollisionShape2D" parent="Player"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_aij12")

[node name="spellposition" type="Node2D" parent="Player"]

[node name="Marker2D" type="Marker2D" parent="Player/spellposition"]
position = Vector2(18, 2)

[node name="SpellTimer1" type="Timer" parent="Player"]
wait_time = 2.0

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
position = Vector2(0, 4)
shape = SubResource("CircleShape2D_hkmgt")

[node name="AllSpells" type="Node2D" parent="."]

[node name="triangles" parent="." instance=ExtResource("13_5ugqq")]

[connection signal="firespellActivated" from="Player" to="." method="_on_player_firespell_activated"]
[connection signal="lightingspellActivated" from="Player" to="." method="_on_player_lightingspell_activated"]
[connection signal="waterspellActivated" from="Player" to="." method="_on_player_waterspell_activated"]
[connection signal="timeout" from="Player/SpellTimer1" to="Player" method="_on_spell_timer_1_timeout"]
[connection signal="body_entered" from="Player/Area2D" to="Player" method="_on_area_2d_body_entered"]
[connection signal="respawn" from="triangles" to="." method="_on_triangles_respawn"]
